infra/tenants/ai-agent/base/sno/templates/deployment.yaml
---
# Source: ai-agent/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-agent
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ai-agent
      deployment: ai-agent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ai-agent
        deployment: ai-agent
    spec:
      containers:
      - image: "image-registry.openshift-image-registry.svc:5000/ai-agent/ai-agent@sha256:2e423ea0ee005072b81b37cfabc170ee6347ad5bf59899e0604638d0bfa63f87"
        imagePullPolicy: IfNotPresent
        name: agent-service
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
